Shortened Tutorial.java
- Converted tutorialBot local variable to just a constructor parameter

- Moved Tutorial.fillChat() to constructor functionality

- Instead of converting to an ArrayList, converted to List